--- a/public/css/style.css
+++ b/public/css/style.css
@@ -415,7 +415,7 @@ form input::placeholder {
 }
 
 .loader-body {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -482,7 +482,7 @@ form input::placeholder {
   100% {
     opacity: 0;
     transform: scale(1);
-    z-index: -3;
+    z-index: 0;
   }
 }
 @media screen and (min-width: 992px) {
