--- a/sass/pages/_loader.scss
+++ b/sass/pages/_loader.scss
@@ -1,5 +1,5 @@
 .loader-body {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,6 +65,6 @@
     100% {
       opacity: 0;
       transform: scale(1);
-      z-index: -3 ;
+      z-index: 0 ;
     }
   }
