rectif bouton commande

--- a/sass/components/_buttons-explo.scss
+++ b/sass/components/_buttons-explo.scss
@@ -18,10 +18,8 @@
 
 /* BTN COMMANDER MENU*/
 
-.container_btn{
-    padding: 0;
-    & .btn_commande{
+.btn_commande{
       padding: 15px 40px;
       font-size: 20px;
-    }
-  }
+}
+  
