--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,10 +155,7 @@ footer li a {
 }
 
 /* BTN COMMANDER MENU*/
-.container_btn {
-  padding: 0;
-}
-.container_btn .btn_commande {
+.btn_commande {
   padding: 15px 40px;
   font-size: 20px;
 }
