--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,6 @@ a {
   font-size: 30px;
   display: block;
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   width: auto;
@@ -71,6 +70,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   line-height: 32px;
   margin: 15px;
   padding: 15px;
@@ -78,7 +78,6 @@ a {
   background: #f6f6f6;
   border-radius: 30px;
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   width: auto;
@@ -102,7 +101,13 @@ a {
 .explication i {
   color: gray;
   background: #f6f6f6;
-  margin-right: 20px;
+  font-size: 28px;
+}
+.explication span {
+  margin-left: 10px;
+  font-size: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 footer {
@@ -123,7 +128,6 @@ footer li {
 }
 footer li a {
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   color: #ffffff;
@@ -132,7 +136,6 @@ footer li a {
 /* Btn explorer ACCUEIL */
 .btn {
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   box-shadow: 4px 4px 2px lightgrey;
@@ -140,7 +143,7 @@ footer li a {
   border-radius: 30px;
   text-align: center;
   color: white;
-  padding: 10px;
+  padding: 15px 20px;
   border: none;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -148,16 +151,10 @@ footer li a {
   transition: transform 400ms;
 }
 .btn:hover {
-  transform: scale(1.15);
+  transform: scale(1.1);
   background: linear-gradient(#ff79da, #9356dc);
   opacity: 0.9;
   box-shadow: 4px 4px 2px grey;
-}
-
-/* BTN COMMANDER MENU*/
-.btn_commande {
-  padding: 15px 40px;
-  font-size: 20px;
 }
 
 @media screen and (min-width: 992px) {
@@ -185,7 +182,6 @@ footer li a {
 }
 .bloc-card a {
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   height: 300px;
@@ -479,7 +475,7 @@ form input::placeholder {
   100% {
     opacity: 0;
     transform: scale(1);
-    z-index: 0;
+    z-index: -3;
   }
 }
 @media screen and (min-width: 992px) {
@@ -544,7 +540,6 @@ form input::placeholder {
   background: #ffffff;
   border-radius: 30px;
   cursor: pointer;
-  width: 100%;
   text-decoration: none;
   color: #000000;
   border-radius: 15px;
