--- a/sass/base/_liste-fonction.scss
+++ b/sass/base/_liste-fonction.scss
@@ -12,6 +12,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      justify-content: space-between;
       line-height: 32px;
       margin: 15px;
       padding: 15px;
@@ -37,6 +38,12 @@
     & i{
       color: gray;
       background: $background-grey;
-      margin-right: 20px;
+      font-size: 28px;
+    }
+    & span{
+      margin-left: 10px;
+      font-size: 20px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
