--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,7 +115,7 @@ footer {
   padding: 5px 30px 5px 30px;
   color: #ffffff;
 }
-footer h3 {
+footer h4 {
   font-family: "shrikhand", cursive, sans-serif;
   font-size: 25px;
 }
@@ -195,11 +195,14 @@ footer li a {
   color: #278870;
 }
 
-.image_responsive {
+.image__responsive {
   border-radius: 30px 30px 0px 0px;
   width: 100%;
   height: 200px;
   object-fit: cover;
+}
+.image__responsive--menu {
+  border-radius: 0px;
 }
 
 .bloc-container {
