--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -28,11 +28,14 @@
       color: darken($color: $color-tertiary, $amount: 40%);
     }
   }
-  .image_responsive{
+  .image__responsive{
       border-radius: 30px 30px 0px 0px;
       width: 100%;
       height: 200px;
       object-fit: cover;
+      &--menu{
+        border-radius: 0px;
+      }
     }
   .bloc-container{
     color: black;
