--- a/public/css/style.css
+++ b/public/css/style.css
@@ -560,13 +560,7 @@ form input::placeholder {
   opacity: 0;
   animation: delay-opacity 0.6s linear 0.8s forwards;
 }
-.assiette__prix {
-  width: 45px;
-  padding-bottom: 15px;
-  display: flex;
-  align-items: flex-end;
-  text-align: center;
-}
+
 .assiette__texte {
   padding: 15px;
   overflow: hidden;
@@ -589,7 +583,22 @@ form input::placeholder {
   text-overflow: ellipsis;
 }
 
+.assiette__prix {
+  width: 45px;
+  padding-bottom: 15px;
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
+  transition: all 0.6s linear;
+}
+
 .assiette--valide {
+  width: 0px;
+  min-width: 0px;
+  height: 72px;
+  left: 1px; /* évite un escalier de l'animation */
+  transform-origin: 100% 50%;
+  transition: all 0.6s linear;
   display: flex;
   flex: 0;
   justify-content: center;
@@ -601,8 +610,11 @@ form input::placeholder {
 }
 .assiette--valide--icone {
   position: absolute;
-  font-size: 20px;
+  left: 20px;
   color: white;
+}
+.assiette--valide:hover > .assiette--valide {
+  min-width: 60px;
 }
 
 .selection {
@@ -617,7 +629,7 @@ form input::placeholder {
   background-color: #99E2D0;
 }
 .selection:hover + .assiette .assiette--valide--icone {
-  animation: tour 0.3s linear forwards;
+  animation: tour 0.5s linear forwards;
 }
 .selection:checked + .assiette .assiette--valide--icone {
   animation: tour 0.3s linear forwards;
