--- a/sass/pages/_4menu.scss
+++ b/sass/pages/_4menu.scss
@@ -1,4 +1,3 @@
-
 .entre-plat{
     @include desktop{
         display: flex;
@@ -61,37 +60,43 @@
         opacity: 0;
         animation: delay-opacity 0.6s linear 0.8s forwards;
     }
-    &__prix{
-        width: 45px;
-        padding-bottom: 15px;
-        display: flex;
-        align-items: flex-end;
-        text-align: center;
-    }
-    &__texte{
-        padding: 15px;
+}
+.assiette__texte{
+    padding: 15px;
+    overflow: hidden;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    &--un{
+        font-weight: 400;
+        margin: 0;
+        white-space: nowrap;
         overflow: hidden;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        &--un{
-            font-weight: 400;
-            margin: 0;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        &--deux{
-            font-weight: 100;
-            margin: 0;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+        text-overflow: ellipsis;
+    }
+    &--deux{
+        font-weight: 100;
+        margin: 0;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
-
+.assiette__prix{
+    width: 45px;
+    padding-bottom: 15px;
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
+    transition: all 0.6s linear;
+}
 .assiette--valide{
+        width: 0px;
+        min-width: 0px;
+        height: 72px;
+        left: 1px; /* évite un escalier de l'animation */
+        transform-origin: 100% 50%;
+        transition: all 0.6s linear;
     display:flex;
     flex: 0;
     justify-content: center;
@@ -102,8 +107,11 @@
     border-bottom-right-radius: 15px;
     &--icone{
         position: absolute;
-        font-size: 20px;
-        color: white;
+        left: 20px;
+        color:white
+    }
+    &:hover > .assiette--valide{
+    min-width: 60px;
     }
 }
 
@@ -118,7 +126,7 @@
         background-color: $color-tertiary;
     }
     &:hover + .assiette .assiette--valide--icone{
-        animation: tour 0.3s linear forwards;
+        animation: tour 0.5s linear forwards;
     }
     &:checked + .assiette .assiette--valide--icone{
         animation: tour 0.3s linear forwards;
