--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
 
 body {
   margin: 0;
-  background: white;
+  background: red;
   font-size: 18px;
   font-family: "Roboto", sans empattement, sans-serif;
   color: #000000;
